More embarrasing errors fixed

--- a/theory2.org
+++ b/theory2.org
@@ -172,8 +172,8 @@
 	// called an if guard.
         case Taken(from, to) :: t if( predictionTable(from)) => helper(t, predictionTable)
         case Taken(from, to) :: t if(!predictionTable(from)) => 1 + helper(t, predictionTable.updated(from, true))
-        case NotTaken(addr)  :: t if(!predictionTable(addr)) => 1 + helper(t, predictionTable.updated(addr, false))
-        case NotTaken(addr)  :: t if( predictionTable(addr)) => helper(t, predictionTable)
+        case NotTaken(addr)  :: t if( predictionTable(addr)) => 1 + helper(t, predictionTable.updated(addr, false))
+        case NotTaken(addr)  :: t if(!predictionTable(addr)) => helper(t, predictionTable)
         case _ => 0
       }
     }
